[package]
name = "req"
version = "0.2.1"
edition = "2021"
description = "CLI Http Client. Built-in support for building JSON bodies & more."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
clap = "3.1.6"
colored = "2.0.0"
httpclient = "0.7"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
